// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.styles > IconContainer SHOULD match snapshot > WHEN rendering with default orientation 1`] = `
.c0 {
  align-items: center;
  color: #999e9c;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  margin-left: 0;
  margin-right: 16px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > IconContainer SHOULD match snapshot > WHEN rendering with inverted orientation 1`] = `
.c0 {
  align-items: center;
  color: #999e9c;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  margin-left: 16px;
  margin-right: 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > InputWrapper SHOULD match snapshot > WHEN hasError condition is active 1`] = `
.c0 {
  align-items: center;
  background-color: rgba(17, 19, 18, 0.4);
  border: 1px solid #e04c36;
  border-radius: 6px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 48px;
  padding: 0 16px;
  transition: border-color 0.2s;
  width: 100%;
}

.c0:focus-within {
  border-color: #e04c36;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > InputWrapper SHOULD match snapshot > WHEN invert property layout configuration is applied 1`] = `
.c0 {
  align-items: center;
  background-color: rgba(17, 19, 18, 0.4);
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 6px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row-reverse;
  height: 48px;
  padding: 0 16px;
  transition: border-color 0.2s;
  width: 100%;
}

.c0:focus-within {
  border-color: #ff8b22;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > InputWrapper SHOULD match snapshot > WHEN rendering standard component state properties 1`] = `
.c0 {
  align-items: center;
  background-color: rgba(17, 19, 18, 0.4);
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 6px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 48px;
  padding: 0 16px;
  transition: border-color 0.2s;
  width: 100%;
}

.c0:focus-within {
  border-color: #ff8b22;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Input.styles > StyledInput SHOULD match snapshot > WHEN custom placeholder and typography properties are injected 1`] = `
.c0 {
  background: none;
  border: none;
  color: #079d56;
  flex: 1;
  font-family: Outfit-SemiBold;
  font-size: 16px;
  font-weight: 600;
  height: 100%;
  outline: none;
  text-transform: none;
  width: 100%;
}

.c0::placeholder {
  color: #ff5aad;
  font-family: Outfit-Bold;
  font-weight: 800;
  text-transform: none;
}

<div>
  <input
    class="c0"
  />
</div>
`;

exports[`Input.styles > StyledInput SHOULD match snapshot > WHEN rendering standard native element override properties 1`] = `
.c0 {
  background: none;
  border: none;
  color: #f0f2f1;
  flex: 1;
  font-family: Outfit-Regular;
  font-size: 14px;
  font-weight: 400;
  height: 100%;
  outline: none;
  text-transform: none;
  width: 100%;
}

.c0::placeholder {
  color: #5d615f;
  font-family: Outfit-Regular;
  font-weight: 400;
  text-transform: none;
}

<div>
  <input
    class="c0"
  />
</div>
`;
